Adicionando lista de pacientes na tela de avaliação e ajustes de css

--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -1,4 +1,8 @@
-<mat-horizontal-stepper class="main-stepper" linear="false" #stepper>
+<div *ngIf="loading" class="spinner" fxLayoutAlign="center">
+    <mat-spinner></mat-spinner>
+</div>
+
+<mat-horizontal-stepper *ngIf="!loading" class="main-stepper" linear="false" #stepper>
     <mat-step fxLayoutAlign="center" [stepControl]="firstFormGroup">
         <form [formGroup]="firstFormGroup">
             <ng-template matStepLabel>
@@ -9,8 +13,13 @@
 
             <mat-card>
                 <mat-form-field>
-                    <mat-label>CPF do Paciente</mat-label>
-                    <input mask="000.000.000-00" maxlength="14" matTooltip="CPF sem pontuação" matTooltipPosition="after" matInput placeholder="CPF" #cpf formControlName="cpf" required>
+                    <mat-label>Paciente</mat-label>
+                    <mat-select formControlName="cpf">
+                        <mat-option *ngFor="let patient of patients" [value]="patient.id">
+                            {{ patient.firstName }} - {{ patient.cpf | mask: '000.000.000-00' }}
+                        </mat-option>
+                    </mat-select>
+                    <!-- <input mask="000.000.000-00" maxlength="14" matTooltip="CPF sem pontuação" matTooltipPosition="after" matInput placeholder="CPF" #cpf formControlName="cpf" required> -->
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Local da Avaliação</mat-label>
