--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -1,5 +1,8 @@
-<div class="patients-list">
+<div *ngIf="loading" class="spinner" fxLayoutAlign="center">
+    <mat-spinner></mat-spinner>
+</div>
 
+<div *ngIf="!loading" class="patients-list">
     <div class="form-group">
         <mat-form-field class="search-field" appearance="fill">
             <mat-label>Buscar Paciente</mat-label>
@@ -21,7 +24,7 @@
         </mat-card-content>
         <mat-card-actions align="end">
             <button mat-button (click)="deletePatient(patient.id)"> Excluir Paciente </button>
-            <button mat-button (click)="newEvaluation(patient.cpf)"> Nova avaliação </button>
+            <button mat-button (click)="newEvaluation(patient)"> Nova avaliação </button>
             <button mat-button> Consultar histórico </button>
         </mat-card-actions>
     </mat-card>
