--- a/src/app/evaluation/evaluation.component.css
+++ b/src/app/evaluation/evaluation.component.css
@@ -14,6 +14,15 @@ h3 {
     background-color: #E4022D;
 }
 
+::ng-deep .mat-progress-spinner circle,
+.mat-spinner circle {
+    stroke: #E4022D;
+}
+
+.spinner {
+    margin-top: 30%;
+}
+
 .scrollable-content {
     max-height: 300px;
     overflow: auto;
