--- a/src/app/evaluation/evaluation.component.css
+++ b/src/app/evaluation/evaluation.component.css
@@ -19,6 +19,14 @@ h3 {
     stroke: #E4022D;
 }
 
+.btn-next {
+    float: right !important;
+}
+
+.btn-block {
+    border-color: #f44336;
+}
+
 .spinner {
     margin-top: 30%;
 }
@@ -56,7 +64,12 @@ h3 {
 }
 
 .general-grade {
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.textarea {
+    width: 100%;
 }
 
 .bold-font {
@@ -82,11 +95,25 @@ h3 {
     margin-right: 5px;
 }
 
+.invisible {
+    display: block;
+    visibility: hidden;
+    height: 0;
+    width: 0;
+}
+
+.invalid {
+    color: #E4022D;
+    margin: 20px 0 20px 0;
+}
+
 @media(max-width: 768px) {
     .grade-radio {
         display: none;
     }
     .grade-select {
+        text-align: start;
+        width: 100%;
         display: block;
     }
     .panel-description {
@@ -102,5 +129,15 @@ h3 {
         display: block;
         text-align: center;
         color: #979797;
+    }
+    .btn-block {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .invalid {
+        margin-bottom: 20px;
+    }
+    .textarea {
+        height: 100;
     }
 }
