--- a/src/app/patient-register/patient-register.component.html
+++ b/src/app/patient-register/patient-register.component.html
@@ -71,7 +71,7 @@
                             Cancelar
                         </button>
                         <span class="spacer"></span>
-                        <button mat-button mat-button matStepperNext mat-stroked-button type="submit" color="warn" class="btn-block">
+                        <button mat-button mat-button matStepperNext mat-stroked-button type="submit" color="primary" class="btn-block">
                             Próximo
                         </button>
                     </div>
