--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,7 +19,7 @@
                 </mat-form-field>
             </mat-card-content>
 
-            <button *ngIf="!loading" [disabled]="!loginForm.form.valid" mat-stroked-button type="submit" color="warn" class="btn-block">Entrar</button>
+            <button *ngIf="!loading" [disabled]="!loginForm.form.valid" mat-stroked-button type="submit" color="primary" class="btn-block">Entrar</button>
             <mat-progress-spinner *ngIf="loading" class="example-margin" mode="indeterminate" color="warn"></mat-progress-spinner>
             <button *ngIf="!loading" mat-stroked-button color="warn" (click)="toRegister()" class="btn-block register">Registrar-se</button>
         </form>
