Ajustando css do modal de exclusao de perfil

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,12 +35,12 @@
         </mat-toolbar>
         <div *ngIf="pageTitle.length != 0">
             <ul class="breadcrumb">
-                <li>Home</li>
+                <li><a href="/">Home</a></li>
                 <li>{{pageTitle | titlecase}}</li>
             </ul>
         </div>
-        
-        
+
+
         <router-outlet (activate)="onActivate($event)"></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
